# cbloom

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
csrc/: bloom.c  bloom.h  bloommodule.c
src/cbloom/: __init__.py
tests/: test_bloom.py
