[project]
name = "cbloom"
version = "0.1.0"
description = "A fast light weight bloom filter"
readme = "README.md"
authors = [
    { name = "tom", email = "didymusthomas6@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
