[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cbloom"
version = "0.1.0"
description = "Fast Bloom filter backed by C"
readme = "README.md"
authors = [
    { name = "tom", email = "didymusthomas6@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pybloom-live>=4.0.0",
    "pybloomfiltermmap3",
    "rbloom>=1.5.4",
]
